--- a/Alloy.AndAsync/Web.config
+++ b/Alloy.AndAsync/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -254,6 +254,7 @@
   </episerver>
   <episerver.framework>
     <appData basePath="App_Data" />
+    <licensing licenseFilePath="C:\EPiServer\cms75\License.config" />
     <scanAssembly forceBinFolderScan="true" />
     <virtualRoles addClaims="true">
       <providers>
@@ -387,7 +388,8 @@
   </system.serviceModel>
   <episerver.packaging protectedVirtualPath="~/EPiServer/" protectedPath="modules/_Protected" publicVirtualPath="~/modules/" publicPath="modules" installationMode="Code" />
   <connectionStrings>
-    <add name="EPiServerDB" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|EPiServerDB_21258100.mdf;Initial Catalog=EPiServerDB_21258100;Connection Timeout=60;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="EPiServerDB" connectionString="Data Source=.\SQLEXPRESS_2012;AttachDbFilename=|DataDirectory|EPiServerDB_21258100.mdf;Initial Catalog=EPiServerDB_21258100;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=60;User Instance=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <location path="Views/Plugins">
     <system.web>
