updated to EPiServer.CMS v9.0.3

--- a/Alloy.AndAsync/Web.config
+++ b/Alloy.AndAsync/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -21,6 +21,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="GlobalNewsContainerID" value="" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" optimizeCompilations="true" />
@@ -145,88 +146,76 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ApplicationModules" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Data.Cache" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Data" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Events" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Licensing" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Logging.Log4Net" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="EPiServer.BaseLibrary" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="EPiServer.Configuration" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Enterprise" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ImageLibrary" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="EPiServer.Implementation" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.LinkAnalyzer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Web.WebControls" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="EPiServer.WorkflowFoundation" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.XForms" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.11.0.0" newVersion="8.11.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.3.0" newVersion="9.0.3.0" />
       </dependentAssembly>
       <probing privatePath="modulesbin" />
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.5.1.0" newVersion="8.5.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.5.1.0" newVersion="8.5.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.5.1.0" newVersion="8.5.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Packaging.CmdAPI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
@@ -234,7 +223,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Packaging" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.2.2.0" newVersion="3.2.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.3.0" newVersion="3.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -243,7 +232,6 @@
     </assemblyBinding>
   </runtime>
   <episerver>
-    <workflowSettings disable="true" />
     <applicationSettings httpCacheability="Public" pageValidateTemplate="false" uiShowGlobalizationUserInterface="true" uiUrl="~/EPiServer/CMS/" urlRebaseKind="ToRootRelative" uiEditorCssPaths="~/Static/css/Editor.css" uiSafeHtmlTags="b,i,u,br,em,strong,p,a,img,ol,ul,li" />
     <imageEditor windowWidth="900" windowHeight="600" enabled="true">
       <sizePresets>
@@ -252,7 +240,7 @@
       </sizePresets>
     </imageEditor>
   </episerver>
-  <episerver.framework>
+  <episerver.framework updateDatabaseSchema="true">
     <appData basePath="App_Data" />
     <licensing licenseFilePath="C:\EPiServer\cms75\License.config" />
     <scanAssembly forceBinFolderScan="true" />
@@ -283,21 +271,10 @@
       </providers>
     </localization>
   </episerver.framework>
-  <episerver.baseLibrary>
-    <classFactories>
-      <add type="EPiServer.Implementation.DefaultBaseLibraryFactory, EPiServer.Implementation" id="ContentChannelFactory">
-        <register type="EPiServer.ContentChannels.ContentChannelAdministration, EPiServer" mappedType="EPiServer.ContentChannels.ObjectStoreContentChannelAdministration, EPiServer" />
-        <register type="EPiServer.BaseLibrary.IContentChannelHandler, EPiServer" mappedType="EPiServer.ContentChannels.ContentChannelHandler, EPiServer" />
-      </add>
-      <add type="EPiServer.Core.PropertyControlClassFactory, EPiServer" id="PropertyControlFactory">
-      </add>
-    </classFactories>
-  </episerver.baseLibrary>
   <episerver.shell>
     <publicModules rootPath="~/modules/" autoDiscovery="Modules" />
     <protectedModules rootPath="~/EPiServer/">
-      <add name="EPiServer.Packaging.UI" />
-    <add name="Shell" /><add name="CMS" /></protectedModules>
+    <add name="Shell" /><add name="CMS" /><add name="EPiServer.Packaging.UI" /></protectedModules>
   </episerver.shell>
   <!-- 'Static' location added to configure for static files only -->
   <location path="Modules/_Protected">
@@ -388,8 +365,7 @@
   </system.serviceModel>
   <episerver.packaging protectedVirtualPath="~/EPiServer/" protectedPath="modules/_Protected" publicVirtualPath="~/modules/" publicPath="modules" installationMode="Code" />
   <connectionStrings>
-    <add name="EPiServerDB" connectionString="Data Source=.\SQLEXPRESS_2012;AttachDbFilename=|DataDirectory|EPiServerDB_21258100.mdf;Initial Catalog=EPiServerDB_21258100;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=60;User Instance=True"
-      providerName="System.Data.SqlClient" />
+    <add name="EPiServerDB" connectionString="Data Source=.\SQLEXPRESS_2012;AttachDbFilename=|DataDirectory|EPiServerDB_21258100.mdf;Initial Catalog=EPiServerDB_21258100;Integrated Security=True;MultipleActiveResultSets=True;Connect Timeout=60;User Instance=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <location path="Views/Plugins">
     <system.web>
