--- a/Alloy.AndAsync/Web.config
+++ b/Alloy.AndAsync/Web.config
@@ -22,6 +22,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="GlobalNewsContainerID" value="" />
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+
+    <!-- workaround for the bug: job admin page throws an exception. see http://www.dotnetthoughts.net/webforms-unobtrusivevalidationmode-requires-a-scriptresourcemapping-for-jquery/ -->
+    <!-- TODO @vladimir fix -->
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" optimizeCompilations="true" />
@@ -44,7 +48,8 @@
       </controls>
     </pages>
     <globalization culture="en-US" uiCulture="en" requestEncoding="utf-8" responseEncoding="utf-8" resourceProviderFactoryType="EPiServer.Framework.Localization.LocalizationServiceResourceProviderFactory, EPiServer.Framework" />
-    <httpRuntime requestValidationMode="2.0" />
+    <!--<httpRuntime requestValidationMode="2.0" />-->
+    <httpRuntime targetFramework="4.5.3" requestValidationMode="2.0" />
     <caching>
       <outputCacheSettings>
         <outputCacheProfiles>
