--- a/Alloy.AndAsync/Web.config
+++ b/Alloy.AndAsync/Web.config
@@ -13,6 +13,7 @@
     <section name="episerver.shell" type="EPiServer.Shell.Configuration.EPiServerShellSection, EPiServer.Shell" />
     <section name="episerver.search" type="EPiServer.Search.Configuration.SearchSection, EPiServer.ApplicationModules" />
     <section name="episerver.packaging" type="EPiServer.Packaging.Configuration.EPiServerPackagingSection, EPiServer.Packaging" />
+    <section name="episerver.find" type="EPiServer.Find.Configuration, EPiServer.Find" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -27,6 +28,19 @@
     <!-- TODO @vladimir fix -->
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  
+  <episerver.find
+        serviceUrl="http://es-eu-dev-api01.episerver.net/8H28Ub2xzdpieeVw3IwU1SfXLvaiDTfx/"
+        defaultIndex="vladimirlevchuk_hrglocalpcleva"/>  
+    <!--<episerver.find
+        serviceUrl="http://es-eu-dev-api01.episerver.net/ke1eLoTatRnBGT7RtVT1MqJDvBTp1efJ/"
+        defaultIndex="vladimirlevchuk_hrgcommonlocal1"/>-->
+  <!--<episerver.find
+        serviceUrl="http://es-eu-dev-api01.episerver.net/9y4gP27vg2EQTlRrAu11wxKHskimqkvW/"
+        defaultIndex="vladimirlevchuk_hrgtdldevelopment1"/>-->
+  <!--<episerver.find
+        serviceUrl="http://es-eu-dev-api01.episerver.net/7gGvKuuTQEAQqHC2Cd9rfNtXJEt9noUU/"
+        defaultIndex="vladimirlevchuk_hrgtdltesting1"/>-->
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" optimizeCompilations="true" />
     <pages validateRequest="false" enableEventValidation="true" pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" enableViewState="false">
@@ -112,8 +126,9 @@
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="UrlRoutingHandler" preCondition="integratedMode" verb="*" path="UrlRouting.axd" type="System.Web.HttpForbiddenHandler, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" />
+    <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <staticContent>
       <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="1.00:00:00" />
@@ -234,7 +249,7 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
-    </assemblyBinding>
+    <dependentAssembly><assemblyIdentity name="EPiServer.Find" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-10.0.0.3291" newVersion="10.0.0.3291" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-10.0.0.3291" newVersion="10.0.0.3291" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Blocks" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Cms" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-10.0.0.3291" newVersion="10.0.0.3291" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Optimizations" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-10.0.0.3291" newVersion="10.0.0.3291" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.Statistics" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-10.0.0.3291" newVersion="10.0.0.3291" /></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Find.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" /><bindingRedirect oldVersion="0.0.0.0-10.0.0.3291" newVersion="10.0.0.3291" /></dependentAssembly></assemblyBinding>
   </runtime>
   <episerver>
     <applicationSettings httpCacheability="Public" pageValidateTemplate="false" uiShowGlobalizationUserInterface="true" uiUrl="~/EPiServer/CMS/" urlRebaseKind="ToRootRelative" uiEditorCssPaths="~/Static/css/Editor.css" uiSafeHtmlTags="b,i,u,br,em,strong,p,a,img,ol,ul,li" />
@@ -279,7 +294,11 @@
   <episerver.shell>
     <publicModules rootPath="~/modules/" autoDiscovery="Modules" />
     <protectedModules rootPath="~/EPiServer/">
-    <add name="Shell" /><add name="CMS" /><add name="EPiServer.Packaging.UI" /></protectedModules>
+    <add name="Shell" /><add name="CMS" /><add name="EPiServer.Packaging.UI" /><add name="Find">
+        <assemblies>
+          <add assembly="EPiServer.Find.Framework" />
+        <add assembly="EPiServer.Find.UI" /><add assembly="EPiServer.Find.Blocks" /><add assembly="EPiServer.Find.Cms" /></assemblies>
+      </add></protectedModules>
   </episerver.shell>
   <!-- 'Static' location added to configure for static files only -->
   <location path="Modules/_Protected">
