--- a/Alloy.AndAsync/packages.config
+++ b/Alloy.AndAsync/packages.config
@@ -8,14 +8,22 @@
   <package id="EPiServer.CMS.Core" version="9.0.3" targetFramework="net451" />
   <package id="EPiServer.CMS.UI" version="9.1.0" targetFramework="net451" />
   <package id="EPiServer.CMS.UI.Core" version="9.1.0" targetFramework="net451" />
+  <package id="EPiServer.Find" version="10.0.0.3291" targetFramework="net451" />
+  <package id="EPiServer.Find.Cms" version="10.0.0.3291" targetFramework="net451" />
+  <package id="EPiServer.Find.Framework" version="10.0.0.3291" targetFramework="net451" />
   <package id="EPiServer.Framework" version="9.0.3" targetFramework="net451" />
   <package id="EPiServer.Packaging" version="3.2.3" targetFramework="net451" />
   <package id="EPiServer.Packaging.UI" version="3.2.3" targetFramework="net451" />
+  <package id="Geta.SEO.Sitemaps" version="1.5.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net451" />
   <package id="NuGet.Core" version="2.5.0" targetFramework="net451" />
